# django-rest-clientes

./: .gitignore  README.md  pyproject.toml
clientes/: admin.py  models.py  serializers.py  validators.py  views.py
setup/: settings.py
