[tool.poetry]
name = "django-rest-clientes-master"
version = "0.1.0"
description = ""
authors = ["ledsouza <leandro.souza.159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
astroid = "^3.2.2"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
isort = "^5.13.2"
lazy-object-proxy = "^1.10.0"
mccabe = "^0.7.0"
pylint = "^3.2.2"
pytz = "^2024.1"
six = "^1.16.0"
sqlparse = "^0.5.0"
toml = "^0.10.2"
wrapt = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
